# yaml-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_wheel_3_12_with_docker.sh  build_wheels.py  build_with_docker.sh  create_docker_image.sh  pyproject.toml
.cargo/: config.toml
.github/: ci.yml
benches/: benchmark.py
doc/: benchmarks.md
examples/: benchmark.py  load.py
src/: decoder.rs  lib.rs  yaml.rs
testdata/: deep.yaml  deeper.yaml  garden.yaml
testresults/: 15mb_yaml.yaml  15mb_yaml_rs.yaml  deep.yaml  deep_yaml.yaml  deeper_yaml.yaml  deeper_yaml_rs.yaml  garden.yaml  garden_yaml.yaml
tests/: test_basic.py
