[project]
name = "yaml_rs"
version = "0.3.0"
authors = [{ name = "Martin Bammer", email = "mrbm74@gmail.com" }]
description = "A fast YAML parser and generator written in Rust"
license = { text = "MIT" }
readme = "README.md"
dependencies = []
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
]

[build-system]
requires = ["setuptools", "wheel", "setuptools_rust", "maturin>=1.8.7"]
build-backend = "maturin"

[tool.maturin]
manylinux = "2_28"
strip = true

[tool.poetry.dependencies]
python = '>=3.10'
maturin = ">=1.10.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.1"

[tool.cibuildwheel]
# Build for 3.10–3.14 on Linux
build = ["cp{310,311,312,313,314}-*"]
# Use the correct image (includes all Pythons)
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
skip = ["pp*", "*-musllinux*"]
